fix broken anchors

--- a/blog/2024-07-31-open-planning-r24.12.mdx
+++ b/blog/2024-07-31-open-planning-r24.12.mdx
@@ -17,11 +17,11 @@ Please feel free to forward this post to anyone interested in contributing, whet
 
 ## Open Meetings
 
-- **[Refinement Phase - Release 24.12](#refinement-phase---release-2412)**
-- ~~**[Refinement Day 1 - Release 24.12](#refinement-day-1---release-2412)**~~ **meeting canceled**
-- **[Draft Feature Freeze - Release 24.12](#draft-feature-freeze---release-2412)**
-- **[Refinement Day 2 - Release 24.12](#refinement-day-2---release-2412)**
-- **[Open Planning Days - Release 24.12](#open-planning-days---release-2412)**
+- **Refinement Phase - Release 24.12**
+- ~~**Refinement Day 1 - Release 24.12**~~ **meeting canceled**
+- **Draft Feature Freeze - Release 24.12**
+- **Refinement Day 2 - Release 24.12**
+- **Open Planning Days - Release 24.12**
 
 <!--truncate-->
 
