--- a/docs-kits_versioned_docs/version-24.12/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits_versioned_docs/version-24.12/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -313,7 +313,7 @@ To find the corresponding part instance twins to a given part instance twin, it 
 
 Once the digital twin was created, optionally a Unique ID Push notification can be send by the manufacturer of the part to the customer of the serialized part of batch to inform the customer that information about a serialized part or batch is available as a digital twin. This is an optional process and both, the manufacturer of a part as well as the customer of the part must support Unique ID Push notifications.
 
-For more information, see [Unique ID Push Notifications](#unique-id-push-notifications)
+For more information, see Unique ID Push Notifications
 
 #### Query a Digital Twin Registry to find the digital twin for this built-in part
 
