Changed Status to Active

--- a/docs/release/trg-1/trg-1-09.md
+++ b/docs/release/trg-1/trg-1-09.md
@@ -10,6 +10,7 @@ Proposed release date: "mandatory after": tbd
 | Status     | Created      | Post-History                           |
 |------------|--------------|----------------------------------------|
 | Draft      | 12-March-2025 | Initial contribution                  |
+| Active      | 23-May-2025 | Committer Meeting Review                  |
 
 ## Why
 
