--- a/docs-kits_versioned_docs/version-24.08/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits_versioned_docs/version-24.08/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -95,7 +95,7 @@ Correct semantic filling of all existing fields in the specificAssetIDs (e.g. fi
 
 #### Submodel Descriptors
 
-To enforce a strict need-to-know (and prevent data from being exposed to non-authorized parties), the visibility of entries in the attribute `specificAssetIds` must be protected, i.e.,their visibility must be restricted to authorized parties only. For that, the attribute `externalSubjectId` must be used. Detailed information about this can be found in the [Digital Twin KIT](../../../../kits/digital-twin-kit/software-development-view).
+To enforce a strict need-to-know (and prevent data from being exposed to non-authorized parties), the visibility of entries in the attribute `specificAssetIds` must be protected, i.e.,their visibility must be restricted to authorized parties only. For that, the attribute `externalSubjectId` must be used. Detailed information about this can be found in the [Digital Twin KIT](../../digital-twin-kit/software-development-view).
 
 ##### Submodel Descriptors
 
