--- a/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
+++ b/docs-kits/kits/industry-core-kit/software-development-view/digital-twins.mdx
@@ -48,7 +48,7 @@ The following general conventions apply for all digital twins:
 
 > :raised_hand: **Unique ID Push:** Once a digital twin was registered (initially created), optionally a Unique ID Push notification can be send from the manufacturer (creator of the digital twin) to the customer of the part to inform it that a new digital twin is available.
 
-#### Property specificAssetIds
+### Property specificAssetIds
 
 Specific asset IDs are used to identify digital twins when looking up or searching for these digital twins. This is a required step by a customer of a part to connect the digital twins of their parts with the digital twins of the suppliers' child parts. To a customer, only the information printed on a real-world part is available and can be used for the lookup. Mandatory specific asset IDs ensure that at least this information is available for the digital twin.
 
@@ -145,37 +145,45 @@ Submodels of digital twins are registered in the Connector the same way as for r
 Here's an example how such a submodel descriptor could look like:
 
 ```json
-"submodelDescriptors": [
-  {
-    "idShort": "serialPart",
-    "id": "urn:uuid:7effd7f4-6353-4401-9547-c54b420a22a0",
-    "semanticId": {
-      "type": "ExternalReference",
-      "keys": [
+{
+  "submodelDescriptors": [
+    {
+      "idShort": "serialPart",
+      "id": "urn:uuid:7effd7f4-6353-4401-9547-c54b420a22a0",
+      "semanticId": {
+        "type": "ExternalReference",
+        "keys": [
+          {
+            "type": "GlobalReference",
+            "value": "urn:samm:io.catenax.serial_part:3.0.0#SerialPart"
+          }
+        ]
+      },
+      "endpoints": [
         {
-          "type": "GlobalReference",
-          "value": "urn:samm:io.catenax.serial_part:3.0.0#SerialPart"
+          "interface": "SUBMODEL-3.0",
+          "protocolInformation": {
+            "href": "https://connector.data.plane/api/public/submodel",
+            "endpointProtocol": "HTTP",
+            "endpointProtocolVersion": [
+              "1.1"
+            ],
+            "subprotocol": "DSP",
+            "subprotocolBody": "dspEndpoint=https://connector.control.plane/api/v1/dsp;id=urn:uuid:7effd7f4-6353-4401-9547-c54b420a22a0",
+            "subprotocolBodyEncoding": "plain",
+            "securityAttributes": [
+              {
+                "type": "NONE",
+                "key": "NONE",
+                "value": "NONE"
+              }
+            ]
+          }
         }
       ]
-    },
-    "endpoints": [
-      {
-        "interface": "SUBMODEL-3.0",
-        "protocolInformation": {
-          "href": "https://connector.data.plane/api/public/submodel",
-          "endpointProtocol": "HTTP",
-          "endpointProtocolVersion": ["1.1"],
-          "subprotocol": "DSP",
-          "subprotocolBody": "dspEndpoint=https://connector.control.plane/api/v1/dsp;id=urn:uuid:7effd7f4-6353-4401-9547-c54b420a22a0",
-          "subprotocolBodyEncoding": "plain",
-          "securityAttributes": [
-            { "type": "NONE", "key": "NONE", "value": "NONE" }
-          ]
-        }
-      }
-    ]
-  }
-]
+    }
+  ]
+}
 ```
 
 In this example, the `{providerPath}` part in the `href` is empty, as the Connector asset referenced in `subprotocolBody` directly points to a service returning the correct submodel (set up correctly with its dataAddress in the data provider's Connector).
@@ -189,52 +197,188 @@ If a data provider no longer creates assets on the level of submodels, the Conne
 Here's an example how such a submodel descriptor could look like:
 
 ```json
-"submodelDescriptors": [
-  {
-    "idShort": "serialPart",
-    "id": "urn:uuid:7effd7f4-6353-4401-9547-c54b420a22a0",
-    "semanticId": {
-      "type": "ExternalReference",
-      "keys": [
+{
+  "submodelDescriptors": [
+    {
+      "idShort": "serialPart",
+      "id": "urn:uuid:7effd7f4-6353-4401-9547-c54b420a22a0",
+      "semanticId": {
+        "type": "ExternalReference",
+        "keys": [
+          {
+            "type": "GlobalReference",
+            "value": "urn:samm:io.catenax.serial_part:3.0.0#SerialPart"
+          }
+        ]
+      },
+      "endpoints": [
         {
-          "type": "GlobalReference",
-          "value": "urn:samm:io.catenax.serial_part:3.0.0#SerialPart"
+          "interface": "SUBMODEL-3.0",
+          "protocolInformation": {
+            "href": "https://connector.data.plane/api/public/urn%3Auuid%3A7effd7f4-6353-4401-9547-c54b420a22a0/submodel",
+            "endpointProtocol": "HTTP",
+            "endpointProtocolVersion": [
+              "1.1"
+            ],
+            "subprotocol": "DSP",
+            "subprotocolBody": "dspEndpoint=https://connector.control.plane/api/v1/dsp;id=urn:uuid:1475f313-0a83-4e2b-b705-a100eebcb7d7",
+            "subprotocolBodyEncoding": "plain",
+            "securityAttributes": [
+              {
+                "type": "NONE",
+                "key": "NONE",
+                "value": "NONE"
+              }
+            ]
+          }
         }
       ]
-    },
-    "endpoints": [
-      {
-        "interface": "SUBMODEL-3.0",
-        "protocolInformation": {
-          "href": "https://connector.data.plane/api/public/urn%3Auuid%3A7effd7f4-6353-4401-9547-c54b420a22a0/submodel",
-          "endpointProtocol": "HTTP",
-          "endpointProtocolVersion": ["1.1"],
-          "subprotocol": "DSP",
-          "subprotocolBody": "dspEndpoint=https://connector.control.plane/api/v1/dsp;id=urn:uuid:1475f313-0a83-4e2b-b705-a100eebcb7d7",
-          "subprotocolBodyEncoding": "plain",
-          "securityAttributes": [
-            { "type": "NONE", "key": "NONE", "value": "NONE" }
-          ]
-        }
-      }
-    ]
-  }
-]
+    }
+  ]
+}
 ```
 
-The the `{providerPath}` part of the `href` property contains the information for the backend data service which digital twin's submodel to return while the asset ID is used for several endpoints. The path part here is just an example as it depends on the type of backend data service the data provider uses.
+The `{providerPath}` part of the `href` property contains the information for the backend data service which digital twin's submodel to return while the asset ID is used for several endpoints. The path part here is just an example as it depends on the type of backend data service the data provider uses.
 
 The above options are only two examples how a submodel's endpoint can be created. As long as it's compliant with the above conventions (including CX-0002) a data provider can also use any other asset structure.
 
-##### Data Consumption with AAS Submodel Descriptor Endpoints
+#### Performance Test Digital Twin Registry
+
+The purpose of performance test was to analyze how much data can be retrieved from the Digital Twin Registry and Submodel Server within a specific period of time.
+All available shellIds were exported in a CSV file because the API lookup/shells is called once to load all matched shellIds from the DTR. The entire workflow was considered to perform realistic load tests using Apache JMeter.
+
+**Datasets**
+
+| Type                  | Component                 | Quantity | Description                                                        |
+|:----------------------|:--------------------------|:---------|:-------------------------------------------------------------------|
+| Digital Twin Registry | Shells Descriptors        | 1000     | Each Shell Descriptor contains 4 Submodel Descriptors              |
+|                       | Submodel Descriptors      | 4000     | Each Submodel Descriptor points to a dataset in the Submodel Server|
+| SubmodelServer        | Submodel Server Datasets  | 4000     | Entries corresponding to the Submodel Descriptors                  |
+
+**Workflow:**
+
+The tested workflow includes the following steps:
+1.	Randomly select a `shellId` from the given CSV File
+2.	GET DTR EDR Token from EDC Controlplane (execute every 4 minutes)
+a.	Retrieve EDC Catalog to determine which EDC Asset is responsible for the DTR.
+b.	Fetch EDR token for the DTR.
+3.	Call DTR API `shell-descriptors/id` via EDC Dataplane to load the Shell Descriptor.
+4.	Randomly select a Submodel Descriptor.
+5.	GET SUBMODEL EDR Token FROM EDC Controlplane (execute every 4 minutes)
+a.	Query the EDC Catalog to find the EDC Asset for the Submodel.
+b.	Fetch EDR token for the Submodel Server.
+6.	Retrieve the dataset from the Submodel Server via EDC Dataplane, as defined in the `href` of the Submodel Descriptor.
+
+**Result**
+
+Test was performed using 20 threads in parallel. The average number of transactions per second was 30-35.
+
+> :raised_hand: If the performance is still not satisfactory for the user, then next given approach can be used, where the aasx file format can be used to transfer big files like parquet files.
+
+#### Data Consumption with AAS Submodel Descriptor to Represent Mass Data (Like Parquet Files) Reference
 
 A data consumer must first identify the correct submodel descriptor for a Catena-X data transfer. For Catena-X submodel descriptors, the `subprotocol` attribute must have the value "DSP". Then, the data consumer must use the information in the `subprotocolBody` to perform a contract negotiation for the asset referenced by `id` with the Connector of the data provider specified by `dspEndpoint` and afterwards initiate the data transfer.
 
 Further information about the data transfer of submodels can be found in the [Digital Twin KIT](../../../../../docs-kits/category/digital-twin-kit).
 
+#### Cloud-to-Cloud Parquet File Transfer with EDC Cloud Extension
+
+1. `Provider` has a parquet file which needs to be shared with consumer.
+2. `Provider` uploads the parquet file to the cloud (S3 bucket in our case)
+3. `Provider` creates an EDC asset for S3 bucket. The `dataAddress` includes information about the S3 bucket and the file name:
+
+```json
+ {
+   "edc:dataAddress": {
+     "edc-type": "Cloud type e.g. AmazonS3",
+     "edc:bucket": "<provider-bucket>",
+     "edc:keyName": "<file-name>"
+   }
+ }
+```
+
+See also full example here: [edc-asset for file transfer](https://eclipse-tractusx.github.io/docs-kits/kits/Quality-Kit/Software%20Development%20View/Specification%20Quality%20Kit/)
+4. `Provider` creates another EDC asset for Submodel pointing to Aspect Model `QualityParquetExchange`. This aspect model will contain the information (assetID, Dataplane URL and Controlplane URl) for AmazonS3 EDC asset created by provider in step 3.
+5. `Provider` creates a shell with Shell Descriptors and the EDC asset with EDC Controlplane/Dataplane URL referring to Submodel created in step 4.
+6. `Consumer` calls the DTR via EDC Dataplane and reads the Submodel Descriptor for `QualityParquetExchange` aspect model from the Shell Descriptor.
+7. `Consumer` calls Submodel Server using Dataplane URL, which is setup by the provider and in response receives the information (assetID, Dataplane URl and Controlplane URL) for AmazonS3 EDC asset created by provider in step 3.
+8. `Consumer` starts negotiation/transfer process and provides its own bucket information:
+
+```json
+ {
+   "edc:dataDestination": {
+     "edc-type": "Cloud type e.g. AmazonS3",
+     "edc:bucket": "<consumer-bucket>",
+     "edc:keyName": "<file-name>",
+     "edc:accessKeyId":"<access-key-id>",
+     "edc:secretAccessKey":"<secretAccessKey>"
+   }
+ }
+```
+
+9. `Provider` retrieve the request and download the requested aasx file from bucket and upload it to the consumer bucket.
+10. `Consumer` can download the file from their own bucket.
+
+#### Submodel Descriptor which provided information to retrieve/transfer Parquet file
+
+The Submodel Descriptor for Parquet file information can be defined like:
+
+```json
+{
+  "submodelDescriptors": [
+    {
+      "idShort": "qualityData",
+      "id": "<uuid>",
+      "endpoints": [
+        {
+          "interface": "SUBMODEL-3.0",
+          "protocolInformation": {
+             "href": "https://connector.data.plane/api/public/parquet/urn%3Auuid%3A7effd7f4-6353-4401-9547-c54b420a22a0",
+            "endpointProtocol": "HTTP",
+            "endpointProtocolVersion": [
+              "1.1"
+            ],
+            "subprotocol": "DSP",
+            "subprotocolBody": "id=<edc-asset-id>;dspEndpoint=<controlplane-url>",
+            "subprotocolBodyEncoding": "plain",
+            "securityAttributes": [
+             {"type": "NONE","key": "NONE","value": "NONE"}
+             ]
+          }
+        }
+      ],
+      "semanticId": {
+        "type": "ExternalReference",
+        "keys": [
+           {
+              "type": "GlobalReference",
+              "value": "urn:bamm:io.catenax.Quality:1.0.0#QualityParquetExchange"
+           }
+        ]
+      },
+        "description": [
+        {
+          "language": "en",
+          "text": "submodel-descriptor for quality usecase which provides data for parquet file to be transferred via EDC."
+        }
+      ]
+    }
+  ]
+}
+```
+
+
+| Parameter               | Value                                                                                                   | Description                                                                                                                                                     |
+|-------------------------|---------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| href                    | 'Dataplane URL'                                                                                         | This Dataplane URl returns aspect model QualityParquetExchange which provides information (assetID, Dataplane URl and Controlplane URL) for AmazonS3 EDC asset  |
+| subprotocolBody         | id=edc-asset-id;dspEndpoint=controlplane-url                                                            | Includes information about provider edc controlplane and edc-asset ID                                                                                           |
+| subprotocolBodyEncoding | plain                                                                                                   | Encoding type for Submodel response                                                                                                                             |
+| semanticId.keys[].value | urn:bamm:io.catenax.Quality:1.0.0#QualityParquetExchange                                                | Aspect model which map flatten hierarchy to model                                                                                                               |
+| description[].text      | submodel-descriptor for quality usecase which provides data for parquet file to be transferred via EDC. | Further description for the consumer.                                                                                                                           |
+
 ### Lookup in the Digital Twin Registry
 
-For a data provider, there are currently the following steps where they have to lookup digital twins of other partners in the Catena-X network.
+For a data provider following steps are currently required when they have to lookup digital twins of other partners in the Catena-X network.
 
 - The data provider must use the local IDs for a serialized part or batch (manufacturer, part number, serial or batch number) and for a just-in-sequence part (manufacturer, parentOrderNumber, jisNumber, jisCallDate) to lookup the AAS ID of the digital twin of this serialized part, batch or just-in-sequence part. The AAS descriptor with this ID contains the Unique ID of the serialized part, batch or just-in-sequence (as globalAssetId) that is used to create SingleLevelBomAsBuilt submodel.
 
