--- a/docs/release/trg-7/trg-7-06.md
+++ b/docs/release/trg-7/trg-7-06.md
@@ -4,6 +4,7 @@ title: TRG 7.06 - Legal notice for end user content
 
 | Status | Created     | Post-History                               |
 |--------|-------------|--------------------------------------------|
+| Draft  | 27-Jun-2025 | Remove documentation section finally       |
 | Active | 25-Apr-2024 | Updates for CC-BY-4.0 license              |
 | Active | 04-Dec-2023 | Update Shared UI Components / NPM library  |
 | Active | 13-Apr-2023 | New                                        |
@@ -53,7 +54,3 @@ Example:
 In order to align with the overall style guide, it's recommended to use the About card provided in the [Shared UI Components](https://eclipse-tractusx.github.io/portal-shared-components) via the respective [NPM library](https://www.npmjs.com/package/@catena-x/portal-shared-components) maintained by the portal product. As reference for the placement of this card in frontend apps: in the portal it has been integrated in an About page which is reachable from the footer.
 
 Regarding usage of this About card, it's recommended to add a json file to your frontend project to be imported for the real content. As some of the content can only be determined in the build pipeline, you could add a json file as reference containing placeholder values. Those placeholder values could then be replaced, by script, just before the build within the build pipeline.
-
-### Documentation
-
-This section moved to [TRG 7.07](/docs/release/trg-7/trg-7-07) and [TRG 7.08](/docs/release/trg-7/trg-7-08).
