docs(community meetings): change contact for umbrella sync

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -106,7 +106,7 @@ All the times are shown in:
 <MeetingInfo title="Umbrella Helm Chart Sync"
              schedule="Every Monday from 11:00 am to 11:30 am"
              description="Open meeting to discuss the integration work around the umbrella helm chart with the purpose to enable a sandbox environment to support end-to-end (e2e) testing and to provide an easy entry point to Tractus-X for developers and adopters."
-             contact="evelyn.gurschler@bmw.de"
+             contact="mgarcia@lksnext.com"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19:meeting_ODMzMzMxY2MtMGI4ZC00MjJkLThjZjYtMzk3ZjBjMmEzYjZj@thread.v2/0?context=%7B%22Tid%22:%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22,%22Oid%22:%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7D"
              additionalLinks={
                 [
