Improve definition of scope
Signed-off-by: Lars Geyer-Blaumeiser <lars.blaumeiser@cofinity-x.com>

--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -1,5 +1,5 @@
 ---
-title: TRG 7.07 - Legal notice for non-code (e.g. documentation, KITs)
+title: TRG 7.07 - Legal notice for non-code (e.g. KITS, documentation, images, slidesets, issue content)
 ---
 
 | Status | Created     | Post-History                  |
@@ -26,19 +26,24 @@ information in a common footer, or a dedicated page.
 
 Eclipse Tractus-X allows the following licenses: Apache-2.0 and CC-BY-4.0 for non-code.
 
-In this TRG, by non-code artifacts we mean e.g. documentation and images embedded in this documentation. All of these
+In this TRG, by non-code artifacts we mean KITs, other documentation including the embedded images, slidesets,
+the content of issues or discussion in the Github organization (this is non-exhaustive list). All of these
 artifacts have to include notices about copyright, license and source location information. Excluded are the
 [legal documentation files](/docs/release/trg-7/trg-7-01#description).
 
 The CC-BY-4.0 is the default license for non-code. Deviating from the default is an exceptional case! For some
 documentation, though, it may makes sense to put it under the Apache-2.0 license, especially for technical
-documentation with code snippets embedded. For the KIT documentation it is recommended to put it under the CC-BY-4.0.
-The following KIT documentation **MUST** be licensed under the CC-BY-4.0:
+documentation with code snippets embedded.
+
+For the KIT documentation it is recommended to put it under the CC-BY-4.0. The following KIT documentation **MUST**
+be licensed under the CC-BY-4.0:
 
 - Adoption View (adoption-view.md)
 
 Self-created content embedded in the listed KIT documentation files under the CC-BY-4.0, have also to be licensed
-under the CC-BY-4.0. Generally self-created artifacts like images, graphics and logos should go under the CC-BY-4.0.
+under the CC-BY-4.0.
+
+Generally self-created artifacts like images, graphics and logos should go under the CC-BY-4.0.
 
 ## How to include legal notices
 
