add release planning 25.12

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -143,63 +143,32 @@ All the times are shown in:
 
 ## One-time meetings
 
-<MeetingInfo title="Refinement Phase - Release 25.09"
-             schedule="Thursday, 27. March 2025 to Monday, 05. May 2025"
-             description="Please be aware that the Refinement Phase is to keep you aware of the overall timeline during the Release Process and does not constitute an actual meeting. It serves informational purposes only. During this time, the necessary people/groups should come together and work (refine) the future features. Feature authors take care of organising appointments and communicating with the relevant contacts themselves. The Teams Session link can be used. Be aware: The link and the shared content is available to everyone."
+<MeetingInfo title="Alignment Day for R25.12"
+             schedule="Thursday, 31. July 2025 from 09:05 AM to 12:00 AM"
+             description="Based on a predefined agenda (depending on the features on the board with label Open Question), individual dependencies are discussed and also documented directly on the feature.."
              contact="stephan.bauer@catena-x.net"
+             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODg5N2NlY2QtNzc2My00ZGJkLWIxNzMtNTFmZGQwZTc2NzU2%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22c4f4cd17-5452-4057-9b00-42444990d814%22%7d"
              additionalLinks={
                  [
-                     {title: "Release Planning Board - Preparation (GitHub)", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/40"},
-                     {title: "sig-release repository (GitHub)", url: "https://github.com/eclipse-tractusx/sig-release"},
-                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.09%22"},
+                     {title: "Release Planning Board - Open Question", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/40?filterQuery=-label%3Ametadata+label%3APrep-R25.12+label%3A%22open+question%22"},
+                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.12%22"},
+                     {title: "News Blog", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.12"},
                      {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
                  ]
              }
 />
 
-<MeetingInfo title="Refinement Day 1 - Release 25.09"
-             schedule="Wednesday, 09. April 2025, 09:05 AM to 12:00 PM"
-             description="Based on a predefined agenda (depending on the features on the board), individual dependencies are discussed and also documented directly on the feature. If the refinement of the features has already been carried out 'in the refinement phase' and the Definition of Entry (DoE) has already reached, this meeting can also be used as synchronisation."
-             contact="stephan.bauer@catena-x.net"
-             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_MzU2MzUxZmItZWYxMy00YWI5LThiZmUtZTVmYzhkMTZlMzk3%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d"
-             additionalLinks={
-                 [
-                     {title: "Release Planning Board - Supported (GitHub)", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/40"},
-                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.09%22"},
-                     {title: "News Blog", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.09"},
-                     {title: "Refinement Sessions (TBD)", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.09"},
-                     {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
-                 ]
-             }
-/>
-
-<MeetingInfo title="Refinement Day 2 - Release 25.09"
-             schedule="Wednesday, 30. April 2025, 09:05 AM to 12:00 PM"
-             description="Based on a predefined agenda (depending on the features on the board), individual dependencies are discussed and also documented directly on the feature. If the refinement of the features has already been carried out 'in the refinement phase' and the Definition of Entry (DoE) has already reached, this meeting can also be used as synchronisation."
-             contact="stephan.bauer@catena-x.net"
-             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzhlNTU3ZTYtYTA4Ni00NWFhLTgxMDMtMWFmYTRkYmVkZWNj%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d"
-             additionalLinks={
-                 [
-                     {title: "Release Planning Board - Supported (GitHub)", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/40"},
-                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.09%22"},
-                     {title: "News Blog", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.09"},
-                     {title: "Refinement Sessions (TBD)", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.09"},
-                     {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
-                 ]
-             }
-/>
-
-<MeetingInfo title="Open Planning Day - Release 25.09"
-             schedule="Wednesday, 07. May 2025, 09:05 AM to 05:00 PM"
+<MeetingInfo title="Open Planning for R25.12"
+             schedule="Thursday, 14. August 2025 from 09:05 AM to 02:30 PM"
              description="The goal for this meeting is planning of the intended work content for the next release - which contains also preparation of future release content, refactoring, general architectural work, tool & process improvements, and feature planning for the next Tractus-X release."
              contact="stephan.bauer@catena-x.net"
-             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NjkzMmM3ZmYtNTA4Zi00MGIyLTk0YWYtODg2OWM1N2E2YTg0%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%225365a192-079b-4140-947d-d47db343e981%22%7d"
+             sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_Y2YwYjBlYWQtY2JmNy00YjkxLWFjNTktZTJiM2ZlYmIzNGQ1%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22c4f4cd17-5452-4057-9b00-42444990d814%22%7d"
              additionalLinks={
                  [
-                     {title: "Release Planning Board - Supported (GitHub)", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/40"},
-                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.09%22"},
-                     {title: "News Blog", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.09"},
-                     {title: "Detailed Agenda", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.09"},
+                     {title: "Release Planning Board - Topic/Product", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/28?filterQuery=-status%3ADone+has%3Atopic%2Fproduct+label%3A%22Prep-R25.12%22+status%3ABacklog"},
+                     {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.12%22"},
+                     {title: "News Blog", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.12"},
+                     {title: "Detailed Agenda", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.12"},
                      {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
                  ]
              }
