absolute path -> relative path

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -152,7 +152,7 @@ All the times are shown in:
                  [
                      {title: "Release Planning Board - Open Question", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/40?filterQuery=-label%3Ametadata+label%3APrep-R25.12+label%3A%22open+question%22"},
                      {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.12%22"},
-                     {title: "News Blog", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.12"},
+                     {title: "News Blog", url: "/blog/release-planning-R25.12"},
                      {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
                  ]
              }
@@ -167,8 +167,8 @@ All the times are shown in:
                  [
                      {title: "Release Planning Board - Topic/Product", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/28?filterQuery=-status%3ADone+has%3Atopic%2Fproduct+label%3A%22Prep-R25.12%22+status%3ABacklog"},
                      {title: "Timeline", url: "https://github.com/orgs/eclipse-tractusx/projects/26/views/35?filterQuery=label%3Ametadata+milestone%3A%2225.12%22"},
-                     {title: "News Blog", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.12"},
-                     {title: "Detailed Agenda", url: "https://eclipse-tractusx.github.io/blog/release-planning-R25.12"},
+                     {title: "News Blog", url: "/blog/release-planning-R25.12"},
+                     {title: "Detailed Agenda", url: "/blog/release-planning-R25.12#agenda-1"},
                      {title: "Release Planning Matrix Chat", url: "https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org"}
                  ]
              }
