Incorporate review comments

--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -161,6 +161,33 @@ file can be placed anywhere in a file system hierarchy and allows to refer to ma
 attribution. As the whole concept is a bit more complex but very well described by the REUSE Software project, we refer
 at this point to the corresponding [specification](https://reuse.software/spec-3.3/#reusetoml) for further details.
 
+See an example filesystem structure for the `REUSE.toml` file:
+
+```shell
+project/
+|__ docs/
+|   |__ adoption-view.md
+|   |__ REUSE.toml
+|   |__ img/
+|      |__ image1.jpg
+|      |__ image2.png
+|__ LICENSE
+|__ LICENSE_non-code
+```
+
+In this example the `REUSE.toml` file contains the following information:
+
+```shell
+version = 1
+
+[[annotations]]
+path = ["img/*.jpg", "img/*.png"]
+precedence = "closest"
+SPDX-FileCopyrightText = "202x {owner}[ and others]"
+SPDX-License-Identifier = "CC-BY-4.0"
+```
+
+
 ### Third-party content
 
 If you third-party content, e.g. images, graphics, logos in your artifacts or repositories, the images have to be attributed
