--- a/docs/release/trg-7/trg-7-08.md
+++ b/docs/release/trg-7/trg-7-08.md
@@ -10,4 +10,4 @@ title: TRG 7.08 - Legal notice for KIT documentation (CC-BY-4.0)
 
 ## Obsolete
 
-Content has been integrated into TRG 7.07
+Content has been integrated into [TRG 7.07](./trg-7-07.md)
