made an absolute link relative

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -23,7 +23,7 @@ All the times are shown in:
              additionalLinks={
                 [
                     {title: 'Taskboard', url: 'https://github.com/orgs/eclipse-tractusx/projects/61/views/1'},
-                    {title: 'Meeting minutes', url: 'https://eclipse-tractusx.github.io/community/meeting-minutes/tags/community'},
+                    {title: 'Meeting minutes', url: '/community/meeting-minutes/tags/community'},
                     {title: 'Timelines', url: 'https://github.com/orgs/eclipse-tractusx/projects/26/views/35'},
                 ]
              }
